--- a/web/miss/index.html
+++ b/web/miss/index.html
@@ -52,15 +52,15 @@
                 <div id="manset">
                     <h2><em>"Özgür Yazılım Pazarlamaya Gereksinim Duyar mı?"</em><br />Seminer --- 27 Kasım, Bilgi Üniversitesi</h2>
                     <img src="resim/pardus_seminer.png" align="right" border="0" alt="Pardus seminer" style="margin:10px;padding-top:20px;"/>
-                    <p>27 Kasım saat 13:00'da Bilgi Üniversitesi Dolapdere Kampüsü'nde TÜBİTAK-UEKAE ve IBM-Bilgi CAS işbirliği ile yapılacak olan Özgür Yazılım ve Pazarlama konulu seminerimizde sizleri de aramızda görmek isteriz.</p> 
-                    <p>Semineri özgür yazılım pazarlama firması InitMarketing kurucusu ve danışmanı Sandro Groganz verecektir.Seminer hakkında detaylı bilgiyi aşağıda bulabilirsiniz.</p> 
+                    <p>27 Kasım saat 13:00'da Bilgi Üniversitesi Dolapdere Yerleşkesi'nde TÜBİTAK-UEKAE ve IBM-Bilgi CAS işbirliği ile yapılacak olan Özgür Yazılım ve Pazarlama konulu seminerimizde sizleri de aramızda görmek isteriz.</p> 
+                    <p>Semineri özgür yazılım pazarlama firması InitMarketing kurucusu ve danışmanı Sandro Groganz verecektir. Seminer hakkında detaylı bilgiyi aşağıda bulabilirsiniz.</p> 
                     <p><strong>Tarih :</strong> 27 Kasım 2008, Perşembe<br />
                     <strong>Saat :</strong> 13:00<br />
-                    <strong>Yer :</strong> Bilgi Üniversitesi Dolapdere Kampüsü
+                    <strong>Yer :</strong> Bilgi Üniversitesi Dolapdere Yerleşkesi
                     <hr />
                     <p><strong>Does Open Source Software Need Marketing? Why and How</strong></p>
                     <p>The market share of Open Source software will double within the next four years. More and more new companies provide Open Source products right from the start and established players release their source code under an OSS license.</p> 
-                    <p>These days, everyone knows that Open Source is a viable business model - but how does one successfully market an Open Source product? A download link alone will not suffice. It rather needs a strategy combinin traditional marketing with community relations and social media marketing.</p> 
+                    <p>These days, everyone knows that Open Source is a viable business model - but how does one successfully market an Open Source product? A download link alone will not suffice. It rather needs a strategy combining traditional marketing with community relations and social media marketing.</p> 
                     <p>This presentation will showcase examples from the Open Source domain and provide hands-on advice about how to unfold a vital Open Source ecosystem where geeks and customers alike contribute to value creation.</p> 
                     <p><strong>Speaker bio:</strong></p> 
                     <p>Sandro Groganz is founder of <a href="http://www.initmarketing.com">InitMarketing</a>, the Open Source marketing company. Prior to founding InitMarketing, he was the VP Marketing at Mindquarry, an Open Source startup financed by Hasso Plattner Ventures, and the VP Communication at eZ Systems, creator of the Open Source content management system eZ Publish. Sandro also has a background as a PHP developer, consultant and author contributing to various books covering LAMP programming. Sandro shares his insights in Open Source marketing at his <a href="http://sandro.groganz.com">Weblog</a></p>
