--- a/web/miss/index.html
+++ b/web/miss/index.html
@@ -50,20 +50,13 @@
             <!-- Manşet Başı -->
             <div id="mansetler">
                 <div id="manset">
-                    <h2><em>"Özgür Yazılım Pazarlamaya Gereksinim Duyar mı?"</em><br />Seminer --- 27 Kasım, Bilgi Üniversitesi</h2>
-                    <img src="resim/pardus_seminer.png" align="right" border="0" alt="Pardus seminer" style="margin:10px;padding-top:20px;"/>
-                    <p>27 Kasım saat 13:00'da Bilgi Üniversitesi Dolapdere Yerleşkesi'nde TÜBİTAK-UEKAE ve IBM-Bilgi CAS işbirliği ile yapılacak olan Özgür Yazılım ve Pazarlama konulu seminerimizde sizleri de aramızda görmek isteriz.</p> 
-                    <p>Semineri özgür yazılım pazarlama firması InitMarketing kurucusu ve danışmanı Sandro Groganz verecektir. Seminer hakkında detaylı bilgiyi aşağıda bulabilirsiniz.</p> 
-                    <p><strong>Tarih :</strong> 27 Kasım 2008, Perşembe<br />
-                    <strong>Saat :</strong> 13:00<br />
-                    <strong>Yer :</strong> Bilgi Üniversitesi Dolapdere Yerleşkesi
-                    <hr />
-                    <p><strong>Does Open Source Software Need Marketing? Why and How</strong></p>
-                    <p>The market share of Open Source software will double within the next four years. More and more new companies provide Open Source products right from the start and established players release their source code under an OSS license.</p> 
-                    <p>These days, everyone knows that Open Source is a viable business model - but how does one successfully market an Open Source product? A download link alone will not suffice. It rather needs a strategy combining traditional marketing with community relations and social media marketing.</p> 
-                    <p>This presentation will showcase examples from the Open Source domain and provide hands-on advice about how to unfold a vital Open Source ecosystem where geeks and customers alike contribute to value creation.</p> 
-                    <p><strong>Speaker bio:</strong></p> 
-                    <p>Sandro Groganz is founder of <a href="http://www.initmarketing.com">InitMarketing</a>, the Open Source marketing company. Prior to founding InitMarketing, he was the VP Marketing at Mindquarry, an Open Source startup financed by Hasso Plattner Ventures, and the VP Communication at eZ Systems, creator of the Open Source content management system eZ Publish. Sandro also has a background as a PHP developer, consultant and author contributing to various books covering LAMP programming. Sandro shares his insights in Open Source marketing at his <a href="http://sandro.groganz.com">Weblog</a>.</p>
+                    <h2><em>"Mahalledeki Yeni Çocuk: Pardus Linux Dağıtımı"</em><br />OSOR Vaka Raporu</h2>
+                    <a href="http://www.osor.eu/case_studies/a-new-kid-on-the-block-the-turkish-pardus-linux-distribution"><img src="resim/osor.png" align="right" border="0" alt="Pardus seminer" style="margin:10px;padding-top:20px;"/></a>
+                    <p>Avrupa Komisyonu'nun <a href="http://osor.eu">Özgür Yazılım Gözlemevi ve Deposu</a> (OSOR) Pardus ile ilgili bir <a href="http://www.osor.eu/case_studies/a-new-kid-on-the-block-the-turkish-pardus-linux-distribution">vaka raporu</a> yayımladı. Suleyman K. Sowe tarafından hazırlanan rapor, Pardus'u her yönüyle ve ayrıntılı olarak inceliyor</p>
+                    <p>Raporun sonuç bölümünde şunlar yazıyor:</p>
+                    <blockquote><em>Pardus, pek çok gönüllü geliştiricinin zaman ve çabalarını vermeleri sayesinde başarılı olan canlı bir özgür yazılım projesi. UEKAE'nin geliştirme sürecine katılışı ve yol haritasını yönetmesi projenin uzun vadede sürdürülebilirliğini güvenceye alıyor. Pardus'u internetten edinenlerin ve Pardus kullanan kurumların Türkiye'nin her yerine dağılmış olması, projenin Türkiye Linux kullanıcılarına kendi dillerinde bir işletim sistemi sunma hedefine ulaştığını ve candan kabul gördüğünü gösteriyor.</em></blockquote>
+                            
+                    <blockquote><em>UEKAE, iş ortakları ve camiayı içine alan yönetişim modeli son derece ilginç bir girişim ve özgür yazılım camiası tarafından yakından izleneceğe benziyor. Bu üç paydaş Pardus hedefleri için birarada çalışabilirlerse özgür yazılım camiası çok değerli bir ürün kazanacak. Kurumlar ve bireyler özgür yazılımdan yararlanma ve pazardaki pek çok ürünü deneme ve değerlendirmede benzeşiyorlar.Her kurum ve birey GNU/Linux dağıtımlarını farklı bir amaçla kullanmak istiyor. Pardus GNU/Linux kullanıcıların beklentilerini dikkate alıyor ve yavaş yavaş Türkiye'de kurum ve bireylerin tercih ettiği Linux dağıtımı haline geliyor. </em></blockquote>
                 </div>
             </div>
             <!-- Manşet Sonu -->
