--- a/web/developer.pardus.org.tr/source/_templates/index.html
+++ b/web/developer.pardus.org.tr/source/_templates/index.html
@@ -13,7 +13,7 @@ Pardus is open source and freely distributed as a GPL (General Public License) p
 </p>
 
 <h2>Documentation</h2>
-<table class="contentstable" align="center" style="margin-left: 30px">
+<table class="contentstable" align="center">
  <tr>
   <td width="25%">
     <p class="biglink"><a class="biglink" href="{{ pathto("comar/index") }}">Comar</a><br/>
@@ -34,8 +34,8 @@ Pardus is open source and freely distributed as a GPL (General Public License) p
     <span class="linkdescr">Desktop greeting application</span></p>
   </td>
   <td width="25%">
-    <p class="biglink"><a class="biglink" href="{{ pathto("bugs/index") }}">Bugs</a><br/>
-    <span class="linkdescr">Howto report a bug</span></p>
+    <p class="biglink"><a class="biglink" href="{{ pathto("howto/index") }}">Howtos</a><br/>
+    <span class="linkdescr">Howto documents</span></p>
     <p class="biglink"><a class="biglink" href="{{ pathto("contents") }}">Full Content</a><br/>
     <span class="linkdescr">All of the documentation</span></p>
   </td>
@@ -57,5 +57,4 @@ or directly checkout from the repository using
 <pre>
   svn co https://svn.pardus.org.tr/pardus/devel/PACKAGE_PATH
 </pre>
-
 {% endblock %}
