--- a/trunk/web/developer.pardus.org.tr/source/_templates/index.html
+++ b/trunk/web/developer.pardus.org.tr/source/_templates/index.html
@@ -9,9 +9,9 @@ Pardus is an open source, freely distributable, GPL (General Public License) lic
 <p>
 As of September 2008, Pardus officially supports 11 languages: Turkish, English, Dutch, French, German, Spanish, Catalan, Italian, Swedish, Polish and Brazilian Portuguese.
 </p>
-<p>                                                                                                                                                              The Pardus project is sponsored by the Turkish National Research Institute of Electronics and Cryptology (<a href="http://uekae.tubitak.gov.tr/home.do?ot=10&lang=en&sid=0&pid=0" target="_blank">UEKAE</a>), an affiliate of the Scientific and Technological Research Council of Turkey (<a href="http://www.tubitak.gov.tr/home
-.do?ot=10&lang=en" target="_blank">TÜBİTAK</a>).
-</p>                                                                                                                                                             <p>
+<p>The Pardus project is sponsored by the Turkish National Research Institute of Electronics and Cryptology (<a href="http://uekae.tubitak.gov.tr/home.do?ot=10&lang=en&sid=0&pid=0" target="_blank">UEKAE</a>), an affiliate of the Scientific and Technological Research Council of Turkey (<a href="http://www.tubitak.gov.tr/home.do?ot=10&lang=en" target="_blank">TÜBİTAK</a>).
+</p>
+<p>
 For more information, please visit <a href="http://www.pardus.org.tr/eng" target="_blank">http://www.pardus.org.tr/eng</a>
 </p>
 <h2>Documentation</h2>
