--- a/web/developer.pardus.org.tr/source/_templates/index.html
+++ b/web/developer.pardus.org.tr/source/_templates/index.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 {% set title = 'Pardus Developer Base' %}
 {% block body %}
-<h1>Welcome to Pardus Developer Base</h1>
+<p>
+Welcome ! This is the documentation for Pardus Technologies.
+</p>
 <h2>What is Pardus?</h2>
 <p>
 Pardus is an open source, freely distributable, GPL (General Public License) licensed user-friendly GNU/Linux distribution with many usability, hardware compatibility, stability and security enhancements. It's named after the Anatolian Leopard.
