--- a/web/miss/indir.html
+++ b/web/miss/indir.html
@@ -68,12 +68,14 @@
       </p>
       <p>
         <ul> <h4 style="margin-bottom:2">KURULAN CD</h4>
-            <li><a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008.1">Pardus sunucusu (ftp)</a></li>
+            <li><b>Pardus Sunucusu</b> [ <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008.1">ftp</a>
+            &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/kurulan/2008.1">http</a> ]</li>
             <li><a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008.1">ODTÜ yansısı(ftp)</a></li>
             <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/kurulan/2008.1">ÇOMÜ yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.linux.org.tr/pub/pardus/kurulan/2008.1">LKD yansısı (ftp)</a></li>
             <h4 style="margin-bottom:2">ÇALIŞAN CD</h4>
-            <li><a href="ftp://ftp.pardus.org.tr/pub/pardus/calisan/2008.1">Pardus sunucusu (ftp)</a></li>
+            <li><b>Pardus Sunucusu</b> [ <a href="ftp://ftp.pardus.org.tr/pub/pardus/calisan/2008.1">ftp</a>
+            &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/calisan/2008.1">http</a> ]</li>
             <li><a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/calisan/2008.1">ODTÜ yansısı(ftp)</a></li>
             <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/calisan/2008.1">ÇOMÜ yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.linux.org.tr/pub/pardus/calisan/2008.1">LKD yansısı (ftp)</a></li>
@@ -103,7 +105,8 @@
       </p>
       <p>
         <ul> 
-            <li><a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008">Pardus sunucusu (ftp)</a></li>
+            <li><b>Pardus Sunucusu</b> [ <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008">ftp</a>
+            &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/kurulan/2008">http</a> ]</li>
             <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/installcd/2008">ÇOMÜ yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.linux.org.tr/pub/pardus/kurulan/2008">LKD yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008">ODTÜ yansısı(ftp)</a></li>
