--- a/web/miss/basin/haber08.html
+++ b/web/miss/basin/haber08.html
@@ -62,12 +62,11 @@
 						<span class="metin">2008 yılında gazete ve dergilerde yayımlanan haberlerin bir bölümüne aşağıdan ulaşabilirsiniz...</span>
 						<br /><br />
 
-						<!--span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2007.04.01/para.jpg">Para</a>, 01.04.2007</span> <br><i>"Pardus'a stajyer aranıyor"</i>
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.03.01/Pardus-PcMagazine-mart2008.jpeg">PCMagazine</a>, 01.03.2008</span> <br><i>"Bu ne yaman çelişki?"</i>
 						<br /><br />
 
-						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2007.01.01/globuspc.jpg">Globus Pc World</a>, 01.01.2007</span>
-						<br><i>"Pardus 2007 çıktı"</i>
-						<br /><br /-->
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.01.01/Pardus-PcNet-Ocak2008-01.jpeg">PCNet</a>, 01.01.2008</span> <br><i>"Amerikalı yine önde"</i>
+						<br /><br />
 
 </p>
                 </td>
