--- a/web/miss/basin/haber08.html
+++ b/web/miss/basin/haber08.html
@@ -62,6 +62,15 @@
 						<span class="metin">2008 yılında gazete ve dergilerde yayımlanan haberlerin bir bölümüne aşağıdan ulaşabilirsiniz...</span>
 						<br /><br />
 
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.08.01/BYTE-Agustos08-01.jpeg">BYTE</a>, 01.08.2008</span> <br><i>"Pardus işletim sisteminin avantajları nelerdir?"</i>
+						<br /><br />
+
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> PCNet, 01.08.2008 <span style="font-size:12px"><a href="./2008.08.01/PCNet-Agustos08-Pardus1.jpeg">Sayfa 146</a>, <a href="./2008.08.01/PCNet-Agustos08-Pardus2.jpeg">Sayfa 147</a></span></span> <br><i>"Kaplan pençesini yeniden gösterdi"</i>
+						<br /><br />
+
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.05.01/Bilisim-Mayıs2008-ozgurlukicin.jpeg">Bilişim</a>, 01.05.2008</span> <br><i>"Tehlikenin farkında mısınız?"</i>
+						<br /><br />
+
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.03.01/Pardus-PcNet-Mart2008.jpeg">PCNet</a>, 01.03.2008</span> <br><i>"Beşi bir yerde"</i>
 						<br /><br />
 
