--- a/web/miss/eng/index.html
+++ b/web/miss/eng/index.html
@@ -36,13 +36,13 @@
 
 <TD width="70%" valign="top">
 
-    <h2><em>"The New Kid on the Block: Turkish Pardus Linux Distribution"</em><br />An OSOR Case Study</h2>
-                        <a href="http://www.osor.eu/case_studies/a-new-kid-on-the-block-the-turkish-pardus-linux-distribution"><img src="../resim/osor.png" align="right" border="0" alt="Pardus seminer" style="margin:10px;padding-top:20px;"/></a>
-                        <p><a href="http://osor.eu">Open Source Observatory and Repository</a> (OSOR) of the European Commission has published a <a href="http://www.osor.eu/case_studies/a-new-kid-on-the-block-the-turkish-pardus-linux-distribution">case study</a> on Pardus. The study penned by Suleyman K. Sowe, and has a detailed and extensive analysis of Pardus.</p>
-                        <p>The conlusion of the report reads:</p>
-                        <blockquote><em>The Pardus project is a vibrant FLOSS project which succeeds because many people volunteer their time and effort to develop the software. UEAKE's involvement in the development process, directing the project's road map is one assurance that the Pardus project will survive in the long run. The fact that the majority of the downloads and organizations using Pardus are distributed all over Turkey is an indication that the goal of the project, to provide Turkish Linux users an operating system in their own language, has been met, and the system and warmly received.</em></blockquote>
-
-                        <em><blockquote>The type of governance model involving sponsors, vendors, and the community envisaged by the Pardus project is a very interesting initiative and will be closely watched by the FLOSS community. If these three sectors can work together to further Pardus goals, then the FLOSS community is in for a great product. Organizations and individuals alike are benefiting from open source and taking the initiative to evaluate and benchmark various products in the markets. Each individual or enterprise will want to use their GNU/Linux desktop for a different purpose. Pardus GNU/Linux is responding well to users demands and slowly becoming the preferred Linux distribution for many people and organisations in Turkey.</em></blockquote>
+                    <h2>Pardus 2008.2 RC1 Gaza is Ready...</h2>
+                    <p>The last planned update for our present stable product Pardus 2008 is closing to completion. Pardus 2008.2 will be released on January 30th, and the first release candidate Pardus 2008.2 RC1 is out as of today.
+                    <a href="../resim/alwayshope.png"><img src="../resim/alwayshope_mini.png" align="right" border="0" alt="There is always hope" style="margin:10px;padding-top:10px;"/></a>
+                    <p>The core team has decided to code name this release candidate as <strong>Gaza</strong>. It is our sincere wish to have an end to this tragedy lasting for weeks, killing hundreds of civilians, and stripping hundreds of thousands off of health, food and other basic needs. Palestinian people in Gaza surely deserve life safety and proper living conditions.
+                    <p>The grafitti artist Banksy speaks for all of us in his work on the Israeli-Palestinian wall: There is always hope...
+                    <p><a href="http://liste.pardus.org.tr/pardus-announce/2009-January/000050.html">The official Pardus 2008.2 RC1 release announcement</a> may be found in the e-mail lists.
+                    <p><small><strong>PS:</strong> Thanks to our beloved A. Murat "Meren" Eren for the anonymous Bansky photo...</small>
 
 <TD width="30%" valign="top">
 <!-- haberler -->
